force-app/main/default/objects/Container__c/Container__c.object-meta.xml
<CustomObject>
    <label>Container</label>
    <nameField>
        <label>Container Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Containers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>