force-app/main/default/objects/Container__c/fields/Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Date__c</fullName>
    <label>Acceptance Date</label>
    <type>DateTime</type>
</CustomField>