force-app/main/default/objects/Container__c/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <label>Arrival Date</label>
    <type>DateTime</type>
</CustomField>