force-app/main/default/objects/Container__c/fields/Contact_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Ext_Id__c</fullName>
    <label>Contact Ext Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>