force-app/main/default/objects/Container__c/fields/Contact_UID__c.field-meta.xml
<CustomField>
    <fullName>Contact_UID__c</fullName>
    <label>Contact UID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>