force-app/main/default/objects/Container__c/fields/Container_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Container_Serial_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>