force-app/main/default/objects/Container__c/fields/Date_Of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Issue__c</fullName>
    <label>Date Of Issue</label>
    <type>DateTime</type>
</CustomField>