force-app/main/default/objects/Container__c/fields/External_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Contact Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>