force-app/main/default/objects/Container__c/fields/Is_In_Temporary_Storage__c.field-meta.xml
<CustomField>
    <fullName>Is_In_Temporary_Storage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is In Temporary Storage</label>
    <type>Checkbox</type>
</CustomField>