force-app/main/default/objects/Container__c/fields/Issuance_Date__c.field-meta.xml
<CustomField>
    <fullName>Issuance_Date__c</fullName>
    <label>Issuance Date</label>
    <type>Date</type>
</CustomField>