force-app/main/default/objects/Container__c/fields/Number_Of_Moves__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Moves__c</fullName>
    <label>Number Of Moves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>