force-app/main/default/objects/Container__c/fields/Serial_number__c.field-meta.xml
<CustomField>
    <fullName>Serial_number__c</fullName>
    <label>Serial number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>