force-app/main/default/objects/Container__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrived for issuance</fullName>
            </value>
            <value>
                <fullName>Arrived for shipment</fullName>
            </value>
            <value>
                <fullName>Awaiting issuance</fullName>
            </value>
            <value>
                <fullName>Awaiting shipment</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Выдан</fullName>
                <isActive>false</isActive>
                <label>Выдан</label>
            </value>
            <value>
                <fullName>Ожидает выдачи</fullName>
                <isActive>false</isActive>
                <label>Ожидает выдачи</label>
            </value>
            <value>
                <fullName>Ожидает отгрузки</fullName>
                <isActive>false</isActive>
                <label>Ожидает отгрузки</label>
            </value>
            <value>
                <fullName>Прибыл для выдачи</fullName>
                <isActive>false</isActive>
                <label>Прибыл для выдачи</label>
            </value>
            <value>
                <fullName>Прибыл на отгрузку</fullName>
                <isActive>false</isActive>
                <label>Прибыл на отгрузку</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>