force-app/main/default/objects/Container__c/fields/Storage_Unit__c.field-meta.xml
<CustomField>
    <fullName>Storage_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage Unit</label>
    <referenceTo>Storage_Unit__c</referenceTo>
    <relationshipLabel>Containers</relationshipLabel>
    <relationshipName>Containers</relationshipName>
    <type>Lookup</type>
</CustomField>