force-app/main/default/objects/Container__c/fields/Warehouse_Cell__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Cell__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Cell</label>
    <referenceTo>Cell__c</referenceTo>
    <relationshipLabel>Containers</relationshipLabel>
    <relationshipName>Containers</relationshipName>
    <type>Lookup</type>
</CustomField>