force-app/main/default/objects/Container__c/fields/Warehouse_Cell_Address__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Cell_Address__c</fullName>
    <formula>Warehouse_Cell__r.Address__c</formula>
    <label>Warehouse Cell Address</label>
    <type>Text</type>
</CustomField>