force-app/main/default/objects/Container__c/fields/Warehouse_Id__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Id__c</fullName>
    <formula>Warehouse_Cell__r.Warehouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Id</label>
    <type>Text</type>
</CustomField>