force-app/main/default/objects/Container__c/validationRules/External_Contact_Id_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>External_Contact_Id_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Contact__c ), ISBLANK( External_Contact_ID__c ) )</errorConditionFormula>
    <errorDisplayField>External_Contact_ID__c</errorDisplayField>
    <errorMessage>This field is required if Contact not selected</errorMessage>
</ValidationRule>