force-app/main/default/objects/Container__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DeliveryDate__c</columns>
    <columns>ExternalId__c</columns>
    <columns>Status__c</columns>
    <columns>Warehouse__c</columns>
    <columns>Serial_number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>